# LightFileExplorer

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: codeql.yml  main.yml
file_server/: BuildManual.md  CMakeLists.txt  Makefile  README.md  TEST  oldREADME.md
file_server/includes/: common.hpp  file_scouter.hpp  global.hpp  main.hpp  nets.hpp  objects.hpp  session.hpp
file_server/objs/: file_scouter.gcda  file_scouter.gcno  file_scouter_unittest.gcda  file_scouter_unittest.gcno  main.gcda  main.gcno  nets.gcda  nets.gcno  nets_unittest.gcda  nets_unittest.gcno  objects.gcda  objects.gcno  objects_unittest.gcda  objects_unittest.gcno  session.gcda  session.gcno  session_unittest.gcda  session_unittest.gcno
file_server/srcs/: .main.cpp.swp  file_scouter.cpp  main.cpp  nets.cpp  objects.cpp  session.cpp
file_server/unittest/srcs/: .objects_unittest.cpp.swp  file_scouter_unittest.cpp  nets_unittest.cpp  objects_unittest.cpp  session_unittest.cpp
network_file_explorer/: Manual.md  README.md
network_file_explorer/client/: Makefile
network_file_explorer/client/downloaded/: file_list.sh
network_file_explorer/client/includes/: common.hpp  global.hpp  gui.hpp  main.hpp  nets.hpp  objects.hpp  utils.hpp
network_file_explorer/client/srcs/: gui.cpp  main.cpp  nets.cpp  (+2 more)
network_file_explorer/server/: Makefile
web_server/: README.md  app.js  config.json  main.js  package-lock.json  package.json  server.js  tcp-client.js  test-tcp-client.js
web_server/downloads/: .gitconfig
web_server/routes/: index.js
web_server/views/: error.pug  index.pug
(+21 files in other folders)
